cmake_minimum_required(VERSION 3.5)
project(coroutine)
set(CMAKE_CXX_FLAGS "-std=c++11 -g -Wall -Wno-attributes -fPIC")
add_library(lxsock SHARED coro.c sock.cpp util.cpp sched.cpp manager.cpp thread.cpp lock.cpp internal.h coro.h)
add_library(lxsock_dbg SHARED coro.c sock.cpp util.cpp sched.cpp manager.cpp thread.cpp lock.cpp internal.h coro.h)
add_executable(testsock test.cpp)
add_executable(testsock_dbg test.cpp)
target_compile_definitions(testsock_dbg PUBLIC SWITCH_DEBUG)
target_compile_definitions(lxsock_dbg PUBLIC SWITCH_DEBUG)
target_link_libraries(testsock lxsock)
target_link_libraries(testsock event)
target_link_libraries(testsock_dbg lxsock_dbg)
target_link_libraries(testsock_dbg event)
install(TARGETS testsock testsock_dbg DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
